src/test/ui/error-codes/E0107.stderr
error[E0107]: this struct takes 2 lifetime arguments but only 1 lifetime argument was supplied
  --> $DIR/E0107.rs:11:11
   |
LL |     buzz: Buzz<'a>,
   |           ^^^^ -- supplied 1 lifetime argument
   |           |
   |           expected 2 lifetime arguments
   |
note: struct defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/E0107.rs:2:8
   |
LL | struct Buzz<'a, 'b>(&'a str, &'b str);
   |        ^^^^ --  --
help: add missing lifetime argument
   |
LL |     buzz: Buzz<'a, 'b>,
   |                  ^^^^

error[E0107]: this enum takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/E0107.rs:15:10
   |
LL |     bar: Bar<'a>,
   |          ^^^---- help: remove these generics
   |          |
   |          expected 0 lifetime arguments
   |
note: enum defined here, with 0 lifetime parameters
  --> $DIR/E0107.rs:4:6
   |
LL | enum Bar {
   |      ^^^

error[E0107]: this struct takes 1 lifetime argument but 3 lifetime arguments were supplied
  --> $DIR/E0107.rs:19:11
   |
LL |     foo2: Foo<'a, 'b, 'c>,
   |           ^^^   -------- help: remove these lifetime arguments
   |           |
   |           expected 1 lifetime argument
   |
note: struct defined here, with 1 lifetime parameter: `'a`
  --> $DIR/E0107.rs:1:8
   |
LL | struct Foo<'a>(&'a str);
   |        ^^^ --

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0107`.
